<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".EarthquakeActivity">

    <item
        android:id="@+id/action_settings"
        android:title="@string/settings_title"
        android:icon="@drawable/settings_icon"
        android:orderInCategory="3"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_filter"
        android:title="@string/filter_title"
        android:icon="@drawable/filter_icon"
        android:orderInCategory="2"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_search"
        android:title="@string/search_title"
        android:icon="@drawable/search_icon"
        android:orderInCategory="1"
        app:showAsAction="ifRoom|collapseActionView"
        app:actionViewClass="androidx.appcompat.widget.SearchView" />

</menu>