<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:text="@string/location_filter_heading"
        android:textSize="12sp" />

    <EditText
        android:id="@+id/location_filter_search_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="16dp"
        android:autofillHints="@null"
        android:clickable="false"
        android:drawableLeft="@drawable/ic_search"
        android:drawablePadding="4dp"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:hint="@null"
        android:inputType="text"
        android:textColorHint="@color/gray_light" />

    <LinearLayout
        android:id="@+id/location_filter_radius_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:background="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/location_filter_radius_left_text"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/location_filter_radius"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            tools:text="123.566" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/location_filter_radius_right_text"
            android:textSize="18sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:orientation="horizontal" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:contentDescription="@null"
            android:padding="2dp"
            android:src="@drawable/ic_date_range" />

        <EditText
            android:id="@+id/location_filter_start_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:autofillHints="@null"
            android:clickable="false"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:gravity="center"
            android:hint="@null"
            android:inputType="date"
            android:textAppearance="?android:textAppearanceMedium"
            tools:text="31/12/2022" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/long_hyphen"
            android:textAppearance="?android:textAppearanceMedium" />

        <EditText
            android:id="@+id/location_filter_end_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:autofillHints="@null"
            android:clickable="false"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:gravity="center"
            android:hint="@null"
            android:inputType="date"
            android:textAppearance="?android:textAppearanceMedium"
            tools:text="31/12/2022" />

        <ImageView
            android:id="@+id/location_filter_reset_date_range"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="8dp"
            android:contentDescription="@null"
            android:src="@drawable/restore_settings_icon" />

    </LinearLayout>

</LinearLayout>
